Support arch x86 and x86_64

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
+# Set the default behavior, in case people don't have core.autocrlf set.
+* text=auto
+
 # Declare files that will always have LF line endings on checkout.
 META-INF/** text eol=lf
 *.prop text eol=lf
@@ -5,4 +8,5 @@ META-INF/** text eol=lf
 *.md text eol=lf
 
 # Denote all files that are truly binary and should not be modified.
-system/** binary
+*.so binary
+*.dex binary
