--- a/Core/build.gradle
+++ b/Core/build.gradle
@@ -9,7 +9,7 @@ android {
 
         externalNativeBuild {
             ndkBuild {
-                abiFilters 'arm64-v8a', 'armeabi-v7a'
+                abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86', 'x86_64'
                 arguments "NDK_PROJECT_PATH=jni/"
             }
         }
@@ -35,7 +35,7 @@ afterEvaluate {
         }
 
 //        def renameTask = task("build${nameCapped}", type: Copy) {
-//            from "release/magisk-${project.name}-arm-arm64-${project.version}.zip"
+//            from "release/magisk-${project.name}-${project.version}.zip"
 //            into "release"
 //            rename("${project.name}", "${project.extensions['module_name']}")
 //            rename("${project.version}", "${project.version}-${nameLowered}")
@@ -44,7 +44,7 @@ afterEvaluate {
         def pushTask = task("push${nameCapped}", type: Exec) {
             workingDir 'release'
             commandLine 'cmd', '/c',
-                    "adb push magisk-${project.extensions['module_name']}-arm-arm64" +
+                    "adb push magisk-${project.extensions['module_name']}" +
                             "-${project.version}-${nameLowered}.zip /sdcard/"
         }
 
