--- a/Core/build.gradle
+++ b/Core/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-version "v0.2.9.7_beta"
+version "v0.2.9.8_beta1"
 extensions["module_name"] = "EdXposed"
 android {
     compileSdkVersion 28
