--- a/Bridge/build.gradle
+++ b/Bridge/build.gradle
@@ -127,6 +127,12 @@ afterEvaluate {
             into '../Core/template_override/system/framework'
             rename("classes.dex", "edxposed.dex")
         }
+
+//        def makeAndCopyTask = task("makeAndCopy${nameCapped}", type: Jar, dependsOn: "assemble${nameCapped}") {
+//            from "build/intermediates/transforms/dexMerger/${nameLowered}/0/"
+//            destinationDir file("../Core/template_override/system/framework/")
+//            baseName "edxposed"
+//        }
     }
 
 }
