--- a/Core/build.gradle
+++ b/Core/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-version "v0.3.0.0_beta3-SNAPSHOT"
+version "v0.3.1.0_beta-SNAPSHOT"
 extensions["module_name"] = "EdXposed"
 android {
     compileSdkVersion 28
