--- a/Core/build.gradle
+++ b/Core/build.gradle
@@ -1,3 +1,5 @@
+import org.gradle.internal.os.OperatingSystem;
+
 apply plugin: 'com.android.library'
 version "v0.3.1.3_beta-SNAPSHOT"
 extensions["module_name"] = "EdXposed"
@@ -28,30 +30,24 @@ afterEvaluate {
 
         def zipTask = task("zip${nameCapped}", type: Exec, dependsOn: ":Bridge:makeAndCopy${nameCapped}") {
             workingDir '..'
-            commandLine 'sh', 'build.sh',\
-                    project.name,\
-                    "${project.version}-${nameLowered}",\
-                    "${project.extensions['module_name']}"
+            commandLine 'sh', 'build.sh',   \
+                       project.name,   \
+                       "${project.version}-${nameLowered}",   \
+                       "${project.extensions['module_name']}"
         }
-
-//        def renameTask = task("build${nameCapped}", type: Copy) {
-//            from "release/magisk-${project.name}-${project.version}.zip"
-//            into "release"
-//            rename("${project.name}", "${project.extensions['module_name']}")
-//            rename("${project.version}", "${project.version}-${nameLowered}")
-//        }
 
         def pushTask = task("push${nameCapped}", type: Exec) {
             workingDir 'release'
-            commandLine 'cmd', '/c',
-                    "adb push magisk-${project.extensions['module_name']}" +
-                            "-${project.version}-${nameLowered}.zip /sdcard/"
+            def commands = ["adb", "push", "magisk-${project.extensions['module_name']}" +
+                    "-${project.version}-${nameLowered}.zip", "/sdcard/"]
+            if (OperatingSystem.current().isWindows()) {
+                commandLine 'cmd', '/c', commands.join(" ")
+            } else {
+                commandLine commands
+            }
         }
 
-//        renameTask.dependsOn(zipTask)
         pushTask.dependsOn(zipTask)
     }
 
-}
-dependencies {
 }
