--- a/Bridge/src/main/AndroidManifest.xml
+++ b/Bridge/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
-<manifest package="com.elderdrivers.riru.xposed"
+<manifest package="com.elderdrivers.riru.edxp"
           xmlns:android="http://schemas.android.com/apk/res/android"/>
