--- a/dexmaker/build.gradle
+++ b/dexmaker/build.gradle
@@ -1,15 +1,3 @@
-buildscript {
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-    dependencies {
-        classpath "net.ltgt.gradle:gradle-errorprone-plugin:0.0.13"
-    }
-}
-
-apply plugin: "net.ltgt.errorprone"
 apply plugin: 'java'
 
 description = "A utility for doing compile or runtime code generation targeting Android's Dalvik VM"
@@ -21,10 +9,23 @@ repositories {
     jcenter()
 }
 
-tasks.withType(JavaCompile) {
-    options.compilerArgs += ["-Xep:StringSplitter:OFF"]
-}
-
 dependencies {
     compileOnly project(':dalvikdx')
+}
+
+task dexInJar(type: Jar) {
+    dependsOn jar
+    doFirst {
+        exec {
+            workingDir jar.destinationDir
+            executable "dx"
+            args "--dex", "--output", "classes.dex", "${jar.archiveName}"
+        }
+    }
+    from "${jar.destinationDir}/classes.dex"
+    destinationDir jar.destinationDir
+    baseName "eddexmaker"
+    onlyIf {
+        !jar.state.upToDate || !file(archiveName).exists()
+    }
 }
