--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
-        
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,6 +16,10 @@ buildscript {
 }
 
 allprojects {
+    ext {
+        templateRootPath = project(":edxp-core").projectDir.path + "/template_override/"
+        templateFrameworkPath = templateRootPath + "/system/framework/"
+    }
     repositories {
         google()
         jcenter()
