--- a/edxp-core/.gitignore
+++ b/edxp-core/.gitignore
@@ -3,5 +3,6 @@
 /libs
 /obj
 /release
-/template_override/system/framework/edxp.jar
+/template_override/system
+/template_override/system_x86
 *.iml
