--- a/edxp-yahfa/build.gradle
+++ b/edxp-yahfa/build.gradle
@@ -53,10 +53,19 @@ afterEvaluate {
         def variantNameCapped = variant.name.capitalize()
         def variantNameLowered = variant.name.toLowerCase()
 
+        def myTemplatePath = "${projectDir}/template_override/"
+
         task("makeAndCopy${variantNameCapped}", type: Jar, dependsOn: "assemble${variantNameCapped}") {
             from "${buildDir}/intermediates/dex/${variantNameLowered}/mergeDex${variantNameCapped}/out/"
-            destinationDir file(templateFrameworkPath)
+            destinationDir file(myTemplatePath + "system/framework/")
             baseName "edxp"
+            doLast {
+                copy {
+                    from file(myTemplatePath)
+                    into file(templateRootPath)
+                }
+            }
+            outputs.upToDateWhen { false }
         }
     }
 }
