--- a/dexmaker/build.gradle
+++ b/dexmaker/build.gradle
@@ -1,3 +1,4 @@
+import org.gradle.internal.os.OperatingSystem
 apply plugin: 'java'
 
 description = "A utility for doing compile or runtime code generation targeting Android's Dalvik VM"
@@ -18,7 +19,10 @@ task dexInJar(type: Jar) {
     doFirst {
         exec {
             workingDir jar.destinationDir
-            executable "dx"
+            if (OperatingSystem.current().isWindows())
+                executable "dx.bat"
+            else
+                executable "dx"
             args "--dex", "--output", "classes.dex", "${jar.archiveName}"
         }
     }
