Minify all variant builds

--- a/edxp-sandhook/build.gradle
+++ b/edxp-sandhook/build.gradle
@@ -13,7 +13,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -58,7 +58,7 @@ afterEvaluate {
 
         task("makeAndCopy${variantNameCapped}", type: Jar, dependsOn: "assemble${variantNameCapped}") {
             dependsOn tasks.getByPath(":edxp-common:copyCommonProperties")
-            from "${buildDir}/intermediates/dex/${variantNameLowered}/mergeDex${variantNameCapped}/out/"
+            from "${buildDir}/intermediates/transforms/dexMerger/${variantNameLowered}/0/"
             destinationDir file(myTemplatePath + "system/framework/")
             baseName "edxp"
             doLast {
