Fix build errors

--- a/edxp-whale/build.gradle
+++ b/edxp-whale/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     compileOnly files("${hiddenApiStubJarFilePath}")
     implementation project(':edxp-common')
     implementation project(':xposed-bridge')
+    compileOnly project(':dexmaker')
 }
 
 
