Differentiate with builds in Maigks repo

--- a/edxp-core/build.gradle
+++ b/edxp-core/build.gradle
@@ -3,7 +3,7 @@ import org.gradle.internal.os.OperatingSystem
 
 apply plugin: 'com.android.library'
 
-version "v0.4.2.3_beta"
+version "v0.4.2.3_alpha"
 
 ext {
     versionCode = "4230"
