--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,5 @@
+version: '0.4.4.5_alpha({build})'
+
 environment:
   ANDROID_HOME: C:\android-sdk-windows
 
@@ -20,6 +22,9 @@ build_script:
 artifacts:
   - path: 'edxp-core\release\**\*.zip'
 
+pull_requests:
+  do_not_increment_build_number: true
+
 only_commits:
   files:
     - dalvikdx/
@@ -35,5 +40,3 @@ only_commits:
     - settings.gradle
     - gradle.properties
     - appveyor.yml
-
-version: '0.4.4.5_alpha (4450) {build}'
