--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven {
+            url "https://dl.bintray.com/rikkaw/MaterialPreference"
+        }
     }
 }
 
