--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,8 @@ install:
     
     yes | C:\android-sdk-windows\tools\bin\sdkmanager.bat --licenses > nul
 cache: 
-- C:\Users\appveyor\.gradle
+- C:\Users\appveyor\.gradle\cache
+- C:\Users\appveyor\.gradle\wrapper
 - C:\android-sdk-windows\build-tools
 - C:\android-sdk-windows\platforms
 - C:\android-sdk-windows\platform-tools
