--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
             android:name=".CompatListActivity"
             android:label="@string/nav_title_compat_list" />
@@ -34,7 +34,9 @@
             android:name=".EdDownloadActivity"
             android:label="@string/Install" />
         <activity android:name=".BlackListActivity" />
-        <activity android:name=".DownloadDetailsActivity" />
+        <activity
+            android:name=".DownloadDetailsActivity"
+            android:label="@string/nav_item_download" />
         <activity
             android:name=".DownloadActivity"
             android:label="@string/Downloads" />
